    * 0252 FIX: ESX vSphere configuration: Fixed non-working configuration parameters...
    * 0456 FIX: Column was too short...
    * 0256 FIX: wato snapshots: snapshot restore no longer fails with older python versions...
    * 0433 FIX: Creating WATO lock during automations (like e.g. master to slave syncs)...
    * 0434 FIX: Fixed wrong count of failed hosts in bulk inventory mode...

    Notifications:
    * 0362 sms: now searching PATH for sendsms and smssend commands...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0338 FIX: Introduce time limit on availability queries...

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...
    * 0344 FIX: Fix semantics of columns num_services_hard_*...

    Livestatus-Proxy:
    * 0263 FIX: livestatus log table: fixed missing logentries of archived logfiles...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...