@@ -1,0 +1,9 @@
+Title: Move two last global settings of Event Console to proper places
+Level: 1
+Component: wato
+Class: fix
+State: unknown
+Version: 1.2.5i1
+Date: 1390556556
+
+
