@@ -221,6 +221,7 @@
     * 0256 FIX: wato snapshots: snapshot restore no longer fails with older python versions...
     * 0433 FIX: Creating WATO lock during automations (like e.g. master to slave syncs)...
     * 0434 FIX: Fixed wrong count of failed hosts in bulk inventory mode...
+    * 0678 FIX: Move two last global settings of Event Console to proper places
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
